home spacing fix

--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ body {
     padding-bottom: 3%;
     margin: -.5%;
     margin-top: 2%;
-    width: 50.9%;
+    width: 50.5%;
 }
 
 #select-page-home div h1{
